commit decision tree model

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,12 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Load the Data\n",
-    "df = pd.read_csv(\"german_credit_data.csv\",index_col=0) # Viết tắt của data - frame"
+    "data = pd.read_csv(\"german_credit_data.csv\",index_col=0) # Viết tắt của data - frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -59,102 +59,195 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>780</th>\n",
-       "      <td>25</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2</td>\n",
-       "      <td>own</td>\n",
-       "      <td>little</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>4933</td>\n",
-       "      <td>39</td>\n",
-       "      <td>radio/TV</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>216</th>\n",
-       "      <td>31</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2</td>\n",
-       "      <td>own</td>\n",
-       "      <td>little</td>\n",
-       "      <td>little</td>\n",
-       "      <td>3104</td>\n",
-       "      <td>18</td>\n",
-       "      <td>business</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>588</th>\n",
-       "      <td>47</td>\n",
-       "      <td>male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>own</td>\n",
-       "      <td>little</td>\n",
-       "      <td>little</td>\n",
-       "      <td>1217</td>\n",
-       "      <td>18</td>\n",
-       "      <td>domestic appliances</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>35</td>\n",
+       "      <th>0</th>\n",
+       "      <td>67</td>\n",
        "      <td>male</td>\n",
        "      <td>2</td>\n",
        "      <td>own</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>2728</td>\n",
-       "      <td>15</td>\n",
+       "      <td>little</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>6</td>\n",
        "      <td>radio/TV</td>\n",
        "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>39</td>\n",
+       "      <th>1</th>\n",
+       "      <td>22</td>\n",
        "      <td>female</td>\n",
        "      <td>2</td>\n",
        "      <td>own</td>\n",
        "      <td>little</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>48</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>49</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>own</td>\n",
        "      <td>little</td>\n",
-       "      <td>860</td>\n",
-       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>12</td>\n",
+       "      <td>education</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>free</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>42</td>\n",
+       "      <td>furniture/equipment</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>free</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>24</td>\n",
+       "      <td>car</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>31</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1736</td>\n",
+       "      <td>12</td>\n",
+       "      <td>furniture/equipment</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>40</td>\n",
+       "      <td>male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>3857</td>\n",
+       "      <td>30</td>\n",
+       "      <td>car</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>38</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>804</td>\n",
+       "      <td>12</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>23</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>free</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>1845</td>\n",
+       "      <td>45</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>27</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>own</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>4576</td>\n",
+       "      <td>45</td>\n",
        "      <td>car</td>\n",
        "      <td>good</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     Age     Sex  Job Housing Saving accounts Checking account  Credit amount   \n",
-       "780   25    male    2     own          little         moderate           4933  \\\n",
-       "216   31    male    2     own          little           little           3104   \n",
-       "588   47    male    1     own          little           little           1217   \n",
-       "138   35    male    2     own             NaN         moderate           2728   \n",
-       "146   39  female    2     own          little           little            860   \n",
+       "0     67    male    2     own             NaN           little           1169  \\\n",
+       "1     22  female    2     own          little         moderate           5951   \n",
+       "2     49    male    1     own          little              NaN           2096   \n",
+       "3     45    male    2    free          little           little           7882   \n",
+       "4     53    male    2    free          little           little           4870   \n",
+       "..   ...     ...  ...     ...             ...              ...            ...   \n",
+       "995   31  female    1     own          little              NaN           1736   \n",
+       "996   40    male    3     own          little           little           3857   \n",
+       "997   38    male    2     own          little              NaN            804   \n",
+       "998   23    male    2    free          little           little           1845   \n",
+       "999   27    male    2     own        moderate         moderate           4576   \n",
        "\n",
        "     Duration              Purpose  Risk  \n",
-       "780        39             radio/TV   bad  \n",
-       "216        18             business  good  \n",
-       "588        18  domestic appliances   bad  \n",
-       "138        15             radio/TV  good  \n",
-       "146         6                  car  good  "
+       "0           6             radio/TV  good  \n",
+       "1          48             radio/TV   bad  \n",
+       "2          12            education  good  \n",
+       "3          42  furniture/equipment  good  \n",
+       "4          24                  car   bad  \n",
+       "..        ...                  ...   ...  \n",
+       "995        12  furniture/equipment  good  \n",
+       "996        30                  car  good  \n",
+       "997        12             radio/TV  good  \n",
+       "998        45             radio/TV   bad  \n",
+       "999        45                  car  good  \n",
+       "\n",
+       "[1000 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sample(5)\n"
+    "data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -182,12 +275,12 @@
     }
    ],
    "source": [
-    "df.info() # 1000 điểm dữ liệu là ít - mô hình khó chính xác - Thu thập nhiều dữ liệu hơn\n"
+    "data.info() # 1000 điểm dữ liệu là ít - mô hình khó chính xác - Thu thập nhiều dữ liệu hơn\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -290,18 +383,18 @@
        "max      75.000000     3.000000   18424.000000    72.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe()\n"
+    "data.describe()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +453,7 @@
     }
    ],
    "source": [
-    "num_cols = [col for col in df.columns if df[col].dtypes != 'O' and col not in \"Id\"]\n",
+    "num_cols = [col for col in data.columns if data[col].dtypes != 'O' and col not in \"Id\"]\n",
     "print('Number of Numerical Variable: ', len(num_cols))\n",
     "\n",
     "\n",
@@ -376,12 +469,12 @@
     "    print(col_counter, \"variables have been plotted\")\n",
     "\n",
     "\n",
-    "hist_for_nums(df, num_cols)"
+    "hist_for_nums(data, num_cols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -396,21 +489,21 @@
     }
    ],
    "source": [
-    "df_good = df[df[\"Risk\"] == 'good']\n",
-    "df_bad = df[df[\"Risk\"] == 'bad']\n",
+    "data_good = data[data[\"Risk\"] == 'good']\n",
+    "data_bad = data[data[\"Risk\"] == 'bad']\n",
     "\n",
     "fig, ax = plt.subplots(nrows=2, figsize=(12,8))\n",
     "plt.subplots_adjust(hspace = 0.4, top = 0.8)\n",
     "\n",
-    "g1 = sns.distplot(df_good[\"Age\"], ax=ax[0], \n",
+    "g1 = sns.distplot(data_good[\"Age\"], ax=ax[0], \n",
     "             color=\"g\")\n",
-    "g1 = sns.distplot(df_bad[\"Age\"], ax=ax[0], \n",
+    "g1 = sns.distplot(data_bad[\"Age\"], ax=ax[0], \n",
     "             color='r')\n",
     "g1.set_title(\"Age Distribuition\", fontsize=15)\n",
     "g1.set_xlabel(\"Age\")\n",
     "g1.set_xlabel(\"Frequency\")\n",
     "\n",
-    "g2 = sns.countplot(x=\"Age\",data=df, \n",
+    "g2 = sns.countplot(x=\"Age\",data=data, \n",
     "              palette=\"hls\", ax=ax[1], \n",
     "              hue = \"Risk\")\n",
     "g2.set_title(\"Age Counting by Risk\", fontsize=15)\n",
@@ -421,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2334,14 +2427,14 @@
     }
    ],
    "source": [
-    "fig = px.histogram(df, x='Risk', color='Risk', title='Credit Risk Distribution')\n",
+    "fig = px.histogram(data, x='Risk', color='Risk', title='Credit Risk Distribution')\n",
     "fig.update_layout(xaxis_title='Credit Risk', yaxis_title='Count')\n",
     "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -11863,12 +11956,12 @@
    "source": [
     "categorical_columns = ['Sex', 'Housing', 'Saving accounts', 'Checking account', 'Purpose']\n",
     "\n",
-    "def visualize_categorical_columns(df, col_list, hue='Risk'):\n",
+    "def visualize_categorical_columns(data, col_list, hue='Risk'):\n",
     "    for col in col_list:\n",
-    "        fig = px.histogram(df, x=col, color=hue, title=f'{col} Distribution by Credit Risk')\n",
+    "        fig = px.histogram(data, x=col, color=hue, title=f'{col} Distribution by Credit Risk')\n",
     "        fig.show()\n",
     "\n",
-    "visualize_categorical_columns(df, categorical_columns)"
+    "visualize_categorical_columns(data, categorical_columns)"
    ]
   }
  ],
